# semantic-release-test

./: .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  WARP.md  package-lock.json  package.json
.github/workflows/: release.yml
cmake/: GetProjectVersion.cmake
include/: mylib.h
scripts/: update-version.sh
src/: mylib.cpp
